# AudioClassification

./: .gitignore  README.md  pyproject.toml  run.sh
src/: model.py  train.py  train_engine.py  utils.py
src/configs/: config.yaml
src/datasets/: augmentation.py  dataset.csv  dataset.py  dataset_sheet.py
